# Text2Timeline

./: .gitignore  Dockerfile  README.md  cli_runner.py  docker-compose.yml  main.py  mplrender_alternative_backup.py  pyproject.toml  requirements.txt  text2timeline.py
backend/commons/: output_exports.py  output_statistics.py  parser_commons.py  t2t_enums.py  t2t_logging.py  temporal.py  utils.py
backend/flask/app_templated/: __init__.py  config.py  routes.py
backend/flask/app_templated/forms/: forms.py
backend/flask/app_templated/static/: style.css
backend/flask/app_templated/templates/: base.html  compare_parsers.html  index.html  input.html  login.html  results.html
backend/flask/models/: app_templated_models.py
backend/flask/services/: result_builder.py
backend/parsers/: allennlp.py  base.py  flairparser.py  spacy.py
backend/renderers/: base_renderer.py  extras.py  mpl.py  plotly.py
backend/services/: parser_comparison_service.py  parserservice.py  pipeline_manager_service.py  plugin_service.py  renderservice.py  t2t_persistence.py
plugins/parsers/: test_plugin_parser.py
plugins/plugin_parsers/: test_plugin_parser.py
plugins/plugin_postprocessors/: example_postprocessor.py  example_postprocessor2.py  fix_events_with_multiple_dates.py
plugins/plugin_preprocessors/: example_preprocessor.py  remove_citations.py
resources/texts/: Germany.txt  Germanyv2.txt  London.txt  random1.txt
resources/texts/short stories/: 1.txt
