[tool.poetry]
name = "text2timeline"
version = "0.5.0"
description = ""
authors = ["Isi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.9.0"
boto3 = "^1.34.125"
allennlp = "^2.10.1"
allennlp-models = "^2.10.1"
plotly = "^5.22.0"
mplcursors = "^0.5.3"
flair = "^0.13.1"
scipy = "1.12"
flask = "^3.0.3"
flask-wtf = "^1.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
